Fix chrome 43 layout issues

--- a/media/less/style/chat/messages.less
+++ b/media/less/style/chat/messages.less
@@ -4,6 +4,12 @@
 
  @messagePadding: 7px;
 
+.lcb-messages-outer {
+    background: #fff;
+    position: relative;
+    .flex(1);
+}
+
 .lcb-messages {
     background: #fff;
     padding: 0;
@@ -12,6 +18,10 @@
     -webkit-overflow-scrolling: touch;
     .flex(1);
     .transform(translate3d(0,0,0));
+    .lcb-messages-outer & {
+        .size(100%);
+        position: absolute;
+    }
 }
 
 .lcb-message {
